# AutoSnapManager

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
asm/: __init__.py  asm.py
asm/managers/: android_manager.py  manager_config.py  windows_manager.py
asm/screencaps/windows/: fullscreencap.py  windowcap.py
asm/utils/: dpi_tools.py  print_config.py  window_tools.py
asmanager/: __init__.py
asmanager/actions/: action_config.py
asmanager/managers/: android_manager.py  manager.py  windows_manager.py
asmanager/matches/android/: opencv_match.py
asmanager/matches/windows/: opencv_match.py
asmanager/screencaps/android/: adbcap.py
asmanager/screencaps/windows/: windowcap.py
asmanager/utils/: command_builder_utils.py  logger.py  process_file_tools.py
autosnapmanager/: __init__.py  config.py
autosnapmanager/matches/windows/: opencv_match.py
autosnapmanager/screencaps/: screencap.py
autosnapmanager/screencaps/android/: minicap.py
autosnapmanager/screencaps/windows/: windowcap.py
autosnapmanager/utils/: module_class.py  process_image_tools.py  utils_config.py
docs/logs/: debug_log  debug_log.2025-02-01_22-21-19_950261  debug_log.2025-02-02_00-59-29_775117  debug_log.2025-02-03_00-00-38_646003  debug_log.2025-02-04_00-04-49_510606  debug_log.2025-02-05_00-07-19_164134  debug_log.2025-02-06_12-23-15_232375  debug_log.2025-02-07_21-20-37_901162
src/asm/: __init__.py
src/autosnapmanager/: __init__.py  asm.py  config.py
src/autosnapmanager/managers/: android_manager.py  (+3 more)
test/: test.py  test_config.py
(+35 files in other folders)
