[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosnapmanager"
version = "0.1.0"
description = "Integration of screenshot matching clicks and other actions of the manager."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "yxs", email = "3556123651@qq.com" }
]
keywords = ["screenshot", "automation", "manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "loguru>=0.7.3,<1.0.0",
    "PyGetWindow>=0.0.9",
    "adbutils>=2.8.0",
    "numpy>=1.24.4",
    "opencv-python>=4.10.0.84",
    "pywin32>=308",
    "Pillow>=10.4.0",
    "PyAutoGUI>=0.9.54",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0",
    "flake8>=5.0.0",
]

[project.scripts]
autosnap = "asmanager.cli:main"

[tool.setuptools]
package-dir = { "" = "asmanager" }

[tool.setuptools.packages.find]
where = ["asmanager"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"